# missiond

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  semantic-terminal.yml
crates/missiond-attach/: Cargo.toml
crates/missiond-core/: Cargo.toml
crates/missiond-core/src/: lib.rs
crates/missiond-core/src/core/: process_manager.rs
crates/missiond-core/src/ipc/: mod.rs
crates/missiond-core/src/pty/: session.rs
crates/missiond-daemon/: Cargo.toml
crates/missiond-daemon/src/: main.rs
crates/missiond-mcp/: Cargo.toml
crates/missiond-runner/: Cargo.toml
crates/semantic-terminal-napi/: Cargo.toml
crates/semantic-terminal-napi/src/: lib.rs
