[package]
name = "missiond-attach"
description = "PTY attach CLI - connect to missiond PTY sessions like docker attach"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "missiond-attach"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "sync", "signal"] }

# WebSocket
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Terminal
crossterm = "0.28"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
