[package]
name = "missiond-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for missiond - PTY management, semantic terminal parsing, and Claude Code orchestration"
readme = "../../README.md"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["sync", "time", "process", "io-util", "fs", "macros", "rt"] }

# PTY
portable-pty = { workspace = true }

# Terminal emulation
alacritty_terminal = { workspace = true }
vte = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# File watching
notify = { workspace = true }

# Directories
dirs = { workspace = true }

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Regex
regex.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

# Lazy initialization
once_cell = "1.19"

# Database
rusqlite = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
tempfile = "3.14"
