[package]
name = "semantic-terminal-napi"
version = "0.1.0"
edition = "2021"
authors = ["Xiaojin Pro"]
license = "MIT"
repository = "https://github.com/rickyjim626/missiond"
description = "Node.js bindings for semantic-terminal - Claude Code terminal output parser"
keywords = ["napi", "claude", "terminal", "parser", "semantic"]
categories = ["development-tools", "parsing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS
napi = { version = "2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2"

# Core library
missiond-core = { path = "../missiond-core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"

